
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int length; void* ctrl_type; void* pptp_type; int magic; } ;
struct pptp_start_ctrl_conn_rqst {int max_channels; TYPE_1__ header; int vendor; int hostname; scalar_t__ firmware_rev; scalar_t__ bearer_cap; scalar_t__ framing_cap; int version; } ;
typedef int request ;


 int PPTP_CTRL_MESSAGE ;
 int PPTP_MAGIC_COOKIE ;
 int PPTP_VERSION ;
 int START_CTRL_CONN_RQST ;
 int htonl (int ) ;
 void* htons (int ) ;
 int ntohs (int) ;
 int send (int,char*,int,int ) ;
 int strcpy (int ,char*) ;

void send_init_request(int st)
{
  struct pptp_start_ctrl_conn_rqst request;
  request.header.magic = htonl(PPTP_MAGIC_COOKIE);
  request.header.pptp_type = htons(PPTP_CTRL_MESSAGE);
  request.header.ctrl_type = htons(START_CTRL_CONN_RQST);

  request.version = PPTP_VERSION;
  request.framing_cap = 0;
  request.bearer_cap = 0;
  request.max_channels = 1;
  request.firmware_rev = 0;
  strcpy(request.hostname,"hell");
  strcpy(request.vendor,"domain HELL");
  request.header.length = ntohs(sizeof(request));

  send(st,(char*)&request,sizeof(request),0);
}
